	  happy side-effect of reducing the initial memory
	  footprint significantly.
	- Now call setlocale() when it is available to localize
	  the date and time in the output.

    BUG FIXES

	- Tables with a lot of COLSPANs could cause a divide-
	  by-zero error or bad pages (NAN instead of a number.)
	- Table cells with a single render element would not be
	  vertically aligned.


CHANGES IN HTMLDOC v1.8.13

    NEW FEATURES

	- Added support for secure (https) URLs via the OpenSSL
	  library.
	- Added support for Acrobat 5.0 (PDF 1.4).
	- Added support for transparency in PostScript and
	  PDF 1.1 and 1.2 output.
	- Added a --no-jpeg option (same as --jpeg=0)
	- Added support for the CSS2 page-break-before and
	  page-break-after properties.
	- Added a PHP example.

    CHANGES

	- External file references to non-PDF files now use the
	  "Launch" action so they can be opened/executed/saved
	  as allowed by the OS and PDF viewer.
	- Changed the indexed/JPEG'd transition point to 256
	  colors when using Flate compression.  This makes PDF
	  files much smaller in general.
	- Changed the in-line image size limit to 64k.
	- Now allow "<" followed by whitespace, "=", or "<". 
	  This violates the HTML specification, but we're sick
	  of people complaining about it.
	- Preferences are now stored in a user-specific file
	  under Windows, just like UNIX.  This provides
	  user-specific preferences and allows preferences to
	  be kept when upgrading to new versions of HTMLDOC.
	- The book loading code now allows for blank lines, even
	  though these are not a part of the format. (added to
	  support some scripted apps that include extra
	  newlines...)
	- Changed the leading space handling of blocks to more
	  closely match the standard browser behavior.

    BUG FIXES

	- The table formatting code adding the border width to
	  the cell width, while Netscape and MSIE don't.  This
	  caused some interesting formatting glitches...