@@ -39,5 +39,40 @@
 </TR>
 </TABLE>
 
+<H1>NOWRAP Table Test</H1>
+
+<TABLE BORDER="1">
+<TR>
+	<TH NOWRAP>This is a very long heading that should not be wrapped.</TH>
+	<TH>Heading 2</TH>
+	<TH>Heading 3</TH>
+	<TH>Heading 4</TH>
+</TR>
+<TR>
+	<TD NOWRAP>This is a very long cell that should not be wrapped.</TD>
+	<TD>Cell 2,1</TD>
+	<TD>Cell 3,1</TD>
+	<TD>Cell 4,1</TD>
+</TR>
+<TR>
+	<TD NOWRAP>This is a very long cell that should not be wrapped.</TD>
+	<TD>Cell 2,2</TD>
+	<TD>Cell 3,2</TD>
+	<TD>Cell 4,2</TD>
+</TR>
+<TR>
+	<TD NOWRAP>This is a very long cell that should not be wrapped.</TD>
+	<TD>Cell 2,3</TD>
+	<TD>Cell 3,3</TD>
+	<TD>Cell 4,3</TD>
+</TR>
+<TR>
+	<TD NOWRAP>This is a very long cell that should not be wrapped.</TD>
+	<TD>Cell 2,4</TD>
+	<TD>Cell 3,4</TD>
+	<TD>Cell 4,4</TD>
+</TR>
+</TABLE>
+
 </BODY>
 </HTML>
